care/force-app/main/default/objects/Family_Hub_Project__c/Family_Hub_Project__c.object-meta.xml
<CustomObject>
    <description>SFORCE-2956
Dev - Family Care Hub - Salesforce Config</description>
    <label>Family Hub Project</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Family Hub Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Hub Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>