care/force-app/main/default/objects/Family_Hub_Project__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFORCE-2956
Dev - Family Care Hub - Salesforce Config</description>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Family Hub Projects</relationshipLabel>
    <relationshipName>Family_Hub_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>