care/force-app/main/default/objects/Family_Hub_Project__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>SFORCE-2956
Dev - Family Care Hub - Salesforce Config</description>
    <label>Project ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>