care/force-app/main/default/objects/Family_Hub_Project__c/fields/Recipient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_First_Name__c</fullName>
    <description>SFORCE-2956
Dev - Family Care Hub - Salesforce Config</description>
    <label>Recipient First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>