care/force-app/main/default/objects/Family_Hub_Project__c/fields/Senior_Care_Adviser__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Adviser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFORCE-2956
Dev - Family Care Hub - Salesforce Config</description>
    <label>Senior Care Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Family_Hub_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>