care/force-app/main/default/objects/Family_Hub_Project__c/recordTypes/Senior_Care_Family_Hub_Project.recordType-meta.xml
<RecordType>
    <fullName>Senior_Care_Family_Hub_Project</fullName>
    <active>true</active>
    <description>SFORCE-2956 Dev - Family Care Hub - Salesforce Config</description>
    <label>Senior Care Family Hub Project</label>
</RecordType>